src/objects/Data_Asset__c.object
<CustomObject>
    <description>Real World Data Inventory</description>
    <fields>
        <fullName>AE_Coding_System__c</fullName>
        <label>AE Coding System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MedDRA</fullName>
                </value>
                <value>
                    <fullName>ICD-9</fullName>
                </value>
                <value>
                    <fullName>ICD-10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_share_with_a_3rd_Party__c</fullName>
        <inlineHelpText>For Analytical Services</inlineHelpText>
        <label>Data can be shared w TPO for analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Details__c</fullName>
        <inlineHelpText>Data Broker - Party not owning the data but getting access/analysis</inlineHelpText>
        <label>Access Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>​Data Mart - Multi-use Contract</fullName>
                </value>
                <value>
                    <fullName>Data Mart - Single Project Contract</fullName>
                </value>
                <value>
                    <fullName>Other In-house Storage</fullName>
                </value>
                <value>
                    <fullName>Third Party Organization</fullName>
                </value>
                <value>
                    <fullName>Data Broker</fullName>
                </value>
                <value>
                    <fullName>Data Owner</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Method__c</fullName>
        <inlineHelpText>Contact to acquire access to the data.</inlineHelpText>
        <label>Access Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <color>#0B6FCE</color>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                    <color>#78C953</color>
                    <label>External</label>
                </value>
                <value>
                    <fullName>No Longer Accessible</fullName>
                    <color>#E27001</color>
                    <label>No Longer Accessible</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_to_Physician_Notes_or_Others__c</fullName>
        <label>Access to Physician Notes or Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accessed_for_In_house_Analysis__c</fullName>
        <label>Available for in-house analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Capabilities__c</fullName>
        <label>Additional Capabilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ability to Link to Patient Registries</fullName>
                </value>
                <value>
                    <fullName>Access to Medical Charts</fullName>
                </value>
                <value>
                    <fullName>Prospective Data Collection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>​Asset Knowledge Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessed by RWD</fullName>
                    <color>#0B6FCE</color>
                    <label>Assessed by RWD</label>
                </value>
                <value>
                    <fullName>Assessment in Progress</fullName>
                    <color>#78C953</color>
                    <label>Assessment in Progress</label>
                </value>
                <value>
                    <fullName>Lilly Research Experience</fullName>
                    <color>#E27001</color>
                    <label>Lilly Research Experience</label>
                </value>
                <value>
                    <fullName>Not Fully Assessed by RWD</fullName>
                    <color>#A845DC</color>
                    <label>Not Fully Assessed by RWD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biobank_Available__c</fullName>
        <label>Biobank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <inlineHelpText>Business unit that is funding the activity or research study.  Select All that Apply.</inlineHelpText>
        <label>Relevant Business Unit(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Type__c</fullName>
        <label>Claims Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type_of_Database__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government (OUS)</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Efficacy_measures_available__c</fullName>
        <label>Clinical Efficacy Measures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coding_System__c</fullName>
        <label>Lab Coding System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOINC</fullName>
                </value>
                <value>
                    <fullName>JLAC 10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contains_AE_s__c</fullName>
        <label>Safety/AE Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Data_Available__c</fullName>
        <label>Cost Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Adjudicated</fullName>
                </value>
                <value>
                    <fullName>Yes - Non Adjudicated</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Data_Detail__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Cost Data Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Inpatient Costs</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
                <value>
                    <fullName>Outpatient Costs</fullName>
                </value>
                <value>
                    <fullName>Prescriptions</fullName>
                </value>
                <value>
                    <fullName>Procedures</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Asset_Name_Comment__c</fullName>
        <label>Information Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Continuity__c</fullName>
        <label>Data Continuity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Longitudinal</fullName>
                </value>
                <value>
                    <fullName>Cross-Sectional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_De_Identified__c</fullName>
        <label>Data De-Identified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Steward_TF__c</fullName>
        <description>This  field stores the name of the Data steward so that data asset can be searched with data steward name using Global search</description>
        <label>Data_Steward_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For In-House Databases Only</inlineHelpText>
        <label>Data Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Assets1_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_TF_Sum__c</fullName>
        <label>Data TF(Sum)</label>
        <summarizedField>Data_Asset_Feedback__c.Data_TF__c</summarizedField>
        <summaryForeignKey>Data_Asset_Feedback__c.Data_Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Demographics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Ethnicity</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>Geographic Region</fullName>
                </value>
                <value>
                    <fullName>Race</fullName>
                </value>
                <value>
                    <fullName>Socioeconomic Status</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Database_Comment__c</fullName>
        <label>Overview Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Database__c</fullName>
        <label>Description of Database</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Coding_Systems_Comment__c</fullName>
        <label>Coding Specifications Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Coding_Systems__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Diagnosis Coding Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ICD-9</fullName>
                </value>
                <value>
                    <fullName>ICD-10</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>SNO MED</fullName>
                </value>
                <value>
                    <fullName>MedDRA</fullName>
                </value>
                <value>
                    <fullName>ICD-O-3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostic_Procedure_Dates__c</fullName>
        <label>​Diagnostic Procedure Dates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostic_Procedures__c</fullName>
        <inlineHelpText>Use this field, when information about the occurrence of Diagnostic Procedures is documented.</inlineHelpText>
        <label>Diagnostic Procedures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostic_Value__c</fullName>
        <label>Diagnostic Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostic_Values_Details__c</fullName>
        <label>Diagnostic Values Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Diagnostic_Value__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Biopsy</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Scales/Questionnaires</fullName>
                </value>
                <value>
                    <fullName>Histology</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Multiple/Not-specified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diagnostic_Values__c</fullName>
        <label>Diagnostic Procedure Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Diagnostic_Procedures__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Biomarkers</fullName>
                </value>
                <value>
                    <fullName>Biopsy</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Scales/Questionnaires</fullName>
                </value>
                <value>
                    <fullName>Histology</fullName>
                </value>
                <value>
                    <fullName>​Imaging</fullName>
                </value>
                <value>
                    <fullName>Multiple/not-specified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Differentiating_Attributes_of_this_data__c</fullName>
        <label>Differentiating Attributes of this data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_Severity_Available__c</fullName>
        <inlineHelpText>i.e., staging</inlineHelpText>
        <label>Disease Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_State__c</fullName>
        <label>Disease State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Alopecia Areata</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease Psychosis</fullName>
                </value>
                <value>
                    <fullName>Anemia</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Atopic Dermatitis</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit-Hyperactivity Disorder</fullName>
                </value>
                <value>
                    <fullName>AxSpA (Axial Spondyloarthritis)</fullName>
                </value>
                <value>
                    <fullName>Bladder Cancer</fullName>
                </value>
                <value>
                    <fullName>Bone and Soft Tissue Cancers</fullName>
                </value>
                <value>
                    <fullName>Breast Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Kidney Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Cluster Headache</fullName>
                </value>
                <value>
                    <fullName>Colorectal Cancer</fullName>
                </value>
                <value>
                    <fullName>Crohn’s Disease</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Disuse Atrophy</fullName>
                </value>
                <value>
                    <fullName>Erectile Dysfunction</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal Cancer</fullName>
                </value>
                <value>
                    <fullName>Genitourinary Cancer</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Head and Neck Cancer</fullName>
                </value>
                <value>
                    <fullName>Hematologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Hepatocellular Cancer</fullName>
                </value>
                <value>
                    <fullName>High Risk Vascular Disease</fullName>
                </value>
                <value>
                    <fullName>Juvenile Idiopathic Arthritis</fullName>
                </value>
                <value>
                    <fullName>Lung and Thoracic Cancer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_Link__c</fullName>
        <label>Contractual Obligations</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Drugs_Dispensed_Data_Available__c</fullName>
        <label>Drugs Dispensed Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drugs_Prescribed_Data_Available__c</fullName>
        <label>Drugs Prescribed Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>When data collection ended</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Most_Recent_2_Year__c</fullName>
        <inlineHelpText>Refer to the date this record was created when viewing this field</inlineHelpText>
        <label>Enrollment (Most Recent 2 Years)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>below 1,000</fullName>
                </value>
                <value>
                    <fullName>1,000-10,000</fullName>
                </value>
                <value>
                    <fullName>10,000- 100,000</fullName>
                </value>
                <value>
                    <fullName>100,000 - 500,000</fullName>
                </value>
                <value>
                    <fullName>500,000 - 2 million</fullName>
                </value>
                <value>
                    <fullName>2 million - 10 million</fullName>
                </value>
                <value>
                    <fullName>10 million - 25 million</fullName>
                </value>
                <value>
                    <fullName>&gt; 25 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Number_Of_Patients__c</fullName>
        <label>Enrollment (Number Of Patients)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>below 1,000</fullName>
                </value>
                <value>
                    <fullName>1,000-10,000</fullName>
                </value>
                <value>
                    <fullName>10,000-100,000</fullName>
                </value>
                <value>
                    <fullName>100,000-500,000</fullName>
                </value>
                <value>
                    <fullName>500,000-2 Million</fullName>
                </value>
                <value>
                    <fullName>2 Million- 10 Million</fullName>
                </value>
                <value>
                    <fullName>10 Million - 25 Million</fullName>
                </value>
                <value>
                    <fullName>&gt; 25 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Number_of_Patients_Comment__c</fullName>
        <label>Data Continuity &amp; Enrollment Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Measures_Available__c</fullName>
        <label>Functional Measures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generalizability__c</fullName>
        <inlineHelpText>Are the Data Generalizable to the Full Country Population of Interest?</inlineHelpText>
        <label>Geographic Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Countries</fullName>
                    <color>#0B6FCE</color>
                    <label>Multiple Countries</label>
                </value>
                <value>
                    <fullName>National</fullName>
                    <color>#78C953</color>
                    <label>National</label>
                </value>
                <value>
                    <fullName>Regional Within Country</fullName>
                    <color>#E27001</color>
                    <label>Regional Within Country</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_considerations_Notes__c</fullName>
        <label>Key Considerations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Details_Comment__c</fullName>
        <label>Labs &amp; Diagnostics Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Test_Dates__c</fullName>
        <label>Lab Test Dates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Test__c</fullName>
        <inlineHelpText>Enter Yes, when information about the occurrence of lab test(s) is documented</inlineHelpText>
        <label>Lab Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Values_Available__c</fullName>
        <label>Lab Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lilly_Internal_Contact_TF__c</fullName>
        <description>This  field stores the name of the Lilly Internal Contact so that data asset can be searched with Lilly Internal Contact name using Global search</description>
        <label>Lilly_Internal_Contact_TF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Internal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Lilly Contact that has knowledge and familiarity with Data Asset</inlineHelpText>
        <label>Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Data_Assets2_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linkable_Details__c</fullName>
        <inlineHelpText>If Data is linked, select All that Apply</inlineHelpText>
        <label>Linkable Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Government Claims</fullName>
                </value>
                <value>
                    <fullName>Commercial Claims</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Claims</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Patient Reported Data</fullName>
                </value>
                <value>
                    <fullName>Sickness Fund (EU)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measure_of_Continuous_Enrollment__c</fullName>
        <label>Measure of Continuous Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>